[package]
name = "uniswap-v3-math-ruint"
version = "0.4.0"
edition = "2021"
description = "Uniswap V3 math in Rust"
readme = "README.md"
exclude = ["target/*", ".github/*", ".gitignore", "Uniswap/*"]

[dependencies]
ethers-core = { version = "2.0.4", default-features = false }
ruint = "1.8.0"
thiserror = "1.0.40"
