[package]
name = "uniswap-v3-math"
version = "0.4.0"
edition = "2021"
description = "Uniswap V3 math in Rust"
readme = "README.md"
exclude = ["target/*", ".github/*", ".gitignore", "Uniswap/*"]

[dependencies]
alloy-primitives = { git = "https://github.com/alloy-rs/core", package = "alloy-primitives"}
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
ruint = "1.8.0"
thiserror = "1.0.40"
